# auditlog-api

./: .pre-commit-config.yaml  README.md  database-setup.md  docker-compose.yml  docker.env.sample
auth_service/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  api_run.py  auth.py  config.py  db.py  dependencies.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  response.py  schemas.py  tenant_service.py  user_service.py  utils.py
auth_service/alembic/: env.py
auth_service/alembic/versions/: 5ef81c21159e_create_table.py
auth_service/tests/: test_health_api.py  test_login_api.py  test_tenant_api.py  test_utils.py
cdk/auditlog_infra/: DEPLOYMENT.md  README.md  app.py  cdk.context.json  db_stack.py  main_stack.py  opensearch_stack.py  s3_stack.py  sqs_stack.py  tenant_stack.py
cdk/auditlog_infra/auditlog_infra/: auditlog_infra_stack.py
cdk/auditlog_infra/tests/unit/: test_auditlog_infra_stack.py
log_service/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  api_run.py  consumer_export.py  consumer_log.py  main.py  pyproject.toml  pytest.ini  requirements.txt
log_service/alembic/: env.py
log_service/alembic/versions/: 1579557e0069_create_audit_logs_table.py  4371106dcddc_create_export_table.py
log_service/api/: logs.py
log_service/core/: auth.py  config.py  db.py  logging.py  openapi.py  response.py
log_service/infra/: opensearch.py  s3.py  sqs.py
log_service/models/: __init__.py  audit_logs.py  export_pipeline.py
log_service/schemas/: base.py  schemas.py
log_service/services/: csv.py  export.py  logs.py  masking.py  search.py
log_service/tests/: test_bulk_create_logs_api.py  test_cleanup_logs_api.py  test_create_log_api.py  test_export_log_data_api.py  test_export_result_api.py  test_get_log_api.py  test_get_log_stats_api.py  test_list_logs_api.py
log_service/tests/core/: test_auth.py
log_service/tests/infrra/: test_sqs.py
log_service/tests/service/: test_export.py  test_logs.py  test_masking.py  test_search.py
log_service/tests/utils/: test_strutils.py  test_tenant.py
log_service/utils/: strutils.py  tenant.py  token.py
postman/: AuditLog.postman_collection.json  Local.postman_environment.json  README.md
scripts/localstack/: localstack.sh
